# prol

./: .gitignore  AI_IDE_Architecture_Research.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.claude/: progress.md  spec.md  tasks-phase3.json  tasks.json
.claude/reviews/: T1-T5-review.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/ai/: mod.rs
src-tauri/src/commands/: ai.rs  fs.rs  mod.rs  paradigm.rs  session.rs
src-tauri/src/config/: mod.rs
src-tauri/src/llm/: mod.rs
src-tauri/src/paradigm/: mod.rs
src-tauri/src/runtime/: mod.rs
src-tauri/src/sandbox/: mod.rs
src-tauri/src/session/: mod.rs
src/components/: CodeViewer.tsx  DiffViewer.tsx  FileTree.tsx  SessionList.tsx  SettingsModal.tsx  TerminalChat.tsx  WelcomeScreen.tsx
